# substrate-node-template

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
docs/: README.md  design.md  questions.md
frontend/: package.json
frontend/src/: App.js  PriceFetch.js  TokenCards.js
frontend/src/config/: development.json
node/: Cargo.toml
node/pallets/price-fetch/: Cargo.toml
node/pallets/price-fetch/src/: lib.rs  tests.rs
node/runtime/: Cargo.toml  custom_types.json
node/runtime/src/: lib.rs  offchaincb.rs  price_fetch.rs
node/scripts/: run
node/src/: chain_spec.rs  main.rs  service.rs
pallets/example-offchain-worker/: Cargo.toml
pallets/example-offchain-worker/src/: lib.rs
pallets/ocw/: Cargo.toml
pallets/ocw/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  price_fetch.rs  tests.rs
scripts/: run
substrate/: Cargo.toml
substrate-node-template/scripts/: run
substrate/node/: service.rs
substrate/node/runtime/: Cargo.toml
substrate/node/runtime/src/: lib.rs
substrate/pallets/price-fetch/: Cargo.toml
substrate/pallets/price-fetch/src/: lib.rs  mock.rs  tests.rs
substrate/scripts/: run
