[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'offchain-node'
version = '2.0.0'

[[bin]]
name = 'offchain-node'
path = 'src/main.rs'

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

# substrate dependencies from github
[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-core"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-inherents"

[dependencies.txpool]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sc-transaction-pool"

[dependencies.txpool-api]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-transaction-pool-api"

[dependencies.network]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sc-network"

[dependencies.aura]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sc-consensus-aura"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-consensus-aura"

[dependencies.consensus-common]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-consensus"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sc-finality-grandpa"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sp-finality-granpda"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.runtime]
package = "runtime"
path = "./runtime"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "sc-basic-authority"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate.git"
rev = "dc8d71c3f0967e9721181e1c0d0d2b3cedbfc306"
package = "substrate-build-script-utils"
