[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'offchain-node'
version = '2.0.0'

[[bin]]
name = 'offchain-node'
path = 'src/main.rs'

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"

# substrate dependencies from github
[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
version = "2.0.0"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
version = "2.0.0"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-core"
version = "2.0.0"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
version = "2.0.0"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
version = "2.0.0"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-inherents"
version = "2.0.0"

[dependencies.txpool]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sc-transaction-pool"
version = "2.0.0"

[dependencies.txpool_api]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-transaction-pool"
version = "2.0.0"

[dependencies.network]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sc-network"
version = "0.8"

[dependencies.aura]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sc-consensus-aura"
version = "0.8"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-consensus-aura"
version = "0.8"

[dependencies.consensus-common]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-consensus"
version = "0.8"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sc-finality-grandpa"
version = "2.0.0"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sp-finality-grandpa"
version = "2.0.0"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
version = "2.0.0"

[dependencies.runtime]
package = "runtime"
path = "./runtime"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "sc-basic-authority"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate.git"
rev = "44772d27744df4851c4d29558556c260bbdf2167"
package = "substrate-build-script-utils"
