[package]
name = "runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"
default-features = false
features = ["derive"]

[dependencies.app-crypto]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sc-application-crypto"
default-features = false

[dependencies.aura]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-aura"
default-features = false

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-consensus-aura"
default-features = false

[dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-balances"
default-features = false

[dependencies.block-builder-api]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-block-builder"
default-features = false

[dependencies.executive]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "frame-executive"
default-features = false

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-grandpa"
default-features = false

[dependencies.indices]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-indices"
default-features = false

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-inherents"
default-features = false

[dependencies.offchain-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-offchain"
default-features = false

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-core"
default-features = false

[dependencies.randomness-collective-flip]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-randomness-collective-flip"
default-features = false

[dependencies.rstd]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-std"
default-features = false

[dependencies.runtime-io]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-io"
default-features = false

[dependencies.simple-json]
git = 'https://github.com/jimmychu0807/simple-json'
version = '0.1.1'
default_features = false

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
default-features = false

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
default-features = false

[dependencies.sudo]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-sudo"
default-features = false

[dependencies.support]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "frame-support"
default-features = false

[dependencies.system]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "frame-system"
default-features = false

[dependencies.timestamp]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-timestamp"
default-features = false

[dependencies.transaction-payment]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "pallet-transaction-payment"
default-features = false

[dependencies.txpool-runtime-api]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-transaction-pool-runtime-api"
default-features = false

[dependencies.version]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sp-version"
default-features = false

[dev-dependencies]
parking_lot = "0.9.0"

[dev-dependencies.offchain]
git = "https://github.com/paritytech/substrate/"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "sc-offchain"

[build-dependencies.wasm-builder-runner]
git = "https://github.com/paritytech/substrate.git"
rev = "368318c9b11c07596cde5dc37220258cfa7dfa76"
package = "substrate-wasm-builder-runner"
version = "1.0.4"

[features]
default = ["std"]
std = [
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"runtime-io/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"txpool-runtime-api/std",
	"version/std",
]
