[package]
name = "runtime"
authors = ["Jimmy Chu"]
version = "1.0.0"
edition = "2018"
build = "./build.rs"

[lib]
path = "./src/lib.rs"

[dependencies]
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
num-traits = { version = "0.2.8", default-features = false }

[dependencies.aura]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-aura"
default-features = false
version = "2.0.0"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-consensus-aura"
default-features = false
version = "0.8"

[dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-balances"
default-features = false
version = "2.0.0"

[dependencies.block-builder-api]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-block-builder"
default-features = false

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"
default-features = false
features = ["derive"]

[dependencies.executive]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "frame-executive"
default-features = false
version = "2.0.0"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-grandpa"
default-features = false
version = "2.0.0"

[dependencies.indices]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-indices"
default-features = false
version = "2.0.0"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-inherents"
default-features = false

[dependencies.offchain-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-offchain"
default-features = false
version = "2.0.0"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-core"
default-features = false
version = "2.0.0"

[dependencies.randomness-collective-flip]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-randomness-collective-flip"
default-features = false
version = "2.0.0"

[dependencies.rstd]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-std"
default-features = false
version = "2.0.0"

[dependencies.runtime-io]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-io"
default-features = false
version = "2.0.0"

[dependencies.sp-api]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
default-features = false
version = "2.0.0"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
default-features = false
version = "2.0.0"

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
default-features = false
version = "2.0.0"

[dependencies.sudo]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-sudo"
default-features = false
version = "2.0.0"

[dependencies.support]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "frame-support"
default-features = false
version = "2.0.0"

[dependencies.system]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "frame-system"
default-features = false
version = "2.0.0"

[dependencies.timestamp]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-timestamp"
default-features = false
version = "2.0.0"

[dependencies.transaction-payment]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-transaction-payment"
default-features = false
version = "2.0.0"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-transaction-pool"
default-features = false
version = "2.0.0"

[dependencies.version]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-version"
default-features = false
version = "2.0.0"

[dependencies.price_fetch]
path = "../pallets/price-fetch"
package = "pallet-price-fetch"
default-features = false
version = "1.0.0"

[build-dependencies.wasm-builder-runner]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "substrate-wasm-builder-runner"
version = "1.0.4"

[features]
default = ["std"]
std = [
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"price_fetch/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"runtime-io/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"sp-transaction-pool/std",
	"version/std",
]
