[package]
name = "pallet-price-fetch"
authors = ["Jimmy Chu"]
version = "1.0.0"
edition = "2018"

[dependencies]
num-traits = { version = "0.2.8", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "1.0.0"
default-features = false
features = ["derive"]

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-core"
default-features = false
version = "2.0.0"

[dependencies.rstd]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-std"
default-features = false
version = "2.0.0"

[dependencies.runtime-io]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "sp-io"
default-features = false
version = "2.0.0"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
default-features = false
version = "2.0.0"

[dependencies.sp-session]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
default-features = false
version = "2.0.0"

[dependencies.support]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "frame-support"
default-features = false
version = "2.0.0"

[dependencies.system]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "frame-system"
default-features = false
version = "2.0.0"

[dependencies.timestamp]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "pallet-timestamp"
default-features = false
version = "2.0.0"

[dependencies.simple-json]
git = 'https://github.com/jimmychu0807/simple-json'
version = '0.1.5'
default_features = false

[build-dependencies.wasm-builder-runner]
git = "https://github.com/paritytech/substrate.git"
rev = "3e651110aa06aa835790df63410a29676243fc54"
package = "substrate-wasm-builder-runner"
version = "1.0.4"

[features]
default = ["std"]
std = [
  "codec/std",
  "primitives/std",
  "rstd/std",
  "runtime-io/std",
  "sp-runtime/std",
  "sp-session/std",
  "support/std",
  "system/std",
  "timestamp/std"
]
